Disabled the pause scene. Added a proper pause menu (canvas) to the game scene that supports keybindings for on and off. Added pause to the game when the pause menu opens. Added script for particles in pause menu to move during pause time.

--- a/Moon Man.csproj
+++ b/Moon Man.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
+    <Compile Include="Assets\Scripts\ContinuousParticlesPauseMenu.cs" />
     <Compile Include="Assets\Scripts\EnemyChaseController.cs" />
     <Compile Include="Assets\Scripts\EnemyHealthManager.cs" />
     <Compile Include="Assets\Scripts\EnemyPatrolController.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Assets\Scripts\QuestTrigger.cs" />
     <Compile Include="Assets\Scripts\QuitOnClick.cs" />
     <Compile Include="Assets\Scripts\RegenZone.cs" />
+    <Compile Include="Assets\Scripts\ResumeSceneOnClick.cs" />
     <Compile Include="Assets\Scripts\ScreenFader.cs" />
     <Compile Include="Assets\Scripts\SelectOnInput.cs" />
     <Compile Include="Assets\Scripts\UIManager.cs" />
