Added bullets to the tank enemy. Bullets hurt the player and shoot in the general direction of the player. Tank and bullets are set to prefabs

--- a/Moon Man.csproj
+++ b/Moon Man.csproj
@@ -117,8 +117,10 @@
     <Compile Include="Assets\Light2D\Scripts\ObstacleCameraPostPorcessor.cs" />
     <Compile Include="Assets\Light2D\Scripts\Point2.cs" />
     <Compile Include="Assets\Light2D\Scripts\Util.cs" />
+    <Compile Include="Assets\Scripts\BulletController.cs" />
     <Compile Include="Assets\Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\ContinuousParticlesPauseMenu.cs" />
+    <Compile Include="Assets\Scripts\EnemyChaseAndShootController.cs" />
     <Compile Include="Assets\Scripts\EnemyChaseController.cs" />
     <Compile Include="Assets\Scripts\EnemyHealthManager.cs" />
     <Compile Include="Assets\Scripts\EnemyPatrolController.cs" />
