--- a/Moon Man.Editor.csproj
+++ b/Moon Man.Editor.csproj
@@ -195,6 +195,7 @@
     <None Include="Assets\Tiled2Unity\Imported\caveswestfloor4.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\desertmap.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\moonoutsideship.tiled2unity.xml" />
+    <None Include="Assets\Tiled2Unity\Imported\prebossfight.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\robotfactoryeast.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\spaceship inside.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\License.txt" />
