Added teleport to boss scene. Added map for boss scene. Bugfixes with pausemenu and gamemanager between scenes

--- a/Moon Man.Editor.csproj
+++ b/Moon Man.Editor.csproj
@@ -187,6 +187,7 @@
     <None Include="Assets\Light2D\Resources\Shaders\TransparentDualColorNormalMapped.shader" />
     <None Include="Assets\Light2D\Resources\Shaders\TransparentNormalMapped.shader" />
     <None Include="Assets\Light2D\changelog.txt" />
+    <None Include="Assets\Tiled2Unity\Imported\BOSSFIGHT.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
     <None Include="Assets\Tiled2Unity\Imported\caveswest.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\caveswestfloor1.tiled2unity.xml" />
