Major bugfixes to restarting the game scene. Removed pausemenu scene and bossfight scene. Bossfight map included in game scene. When game over you restart game scene. Added teleport to bossmap. Changed camera in bossscene.

--- a/Moon Man.csproj
+++ b/Moon Man.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\HurtEnemy.cs" />
     <Compile Include="Assets\Scripts\HurtPlayer.cs" />
+    <Compile Include="Assets\Scripts\InitPlayer.cs" />
     <Compile Include="Assets\Scripts\LoadBossSceneOnTrigger.cs" />
     <Compile Include="Assets\Scripts\LoadSceneOnClick.cs" />
     <Compile Include="Assets\Scripts\MusicController.cs" />
