Boss can walk towards transform on map and shoot projectiles

--- a/Moon Man.csproj
+++ b/Moon Man.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\Light2D\Scripts\ObstacleCameraPostPorcessor.cs" />
     <Compile Include="Assets\Light2D\Scripts\Point2.cs" />
     <Compile Include="Assets\Light2D\Scripts\Util.cs" />
+    <Compile Include="Assets\Scripts\BossBulletController.cs" />
     <Compile Include="Assets\Scripts\BossController.cs" />
     <Compile Include="Assets\Scripts\BossHealthManager.cs" />
     <Compile Include="Assets\Scripts\BossLighting.cs" />
